Update Dockerfile - delete COPY --from=builder /app/target/*.jar app.jar and edit ENTRYPOINT