@@ -3,7 +3,6 @@
 # FROM adoptopenjdk:17-jdk-openj9 as builder
 # FROM ibm-semeru-runtimes:open-17-jdk as builder
 FROM maven:3.9.9-eclipse-temurin-17 as builder
-
 WORKDIR app
  
 ARG JAR_FILE=target/*.jar
@@ -30,7 +29,6 @@ COPY --from=builder app/application/ ./
 # COPY --from=builder app/spring-boot-loader/ ./spring-boot-loader/
 # COPY --from=builder app/snapshot-dependencies/ ./snapshot-dependencies/
 # COPY --from=builder app/application/ ./application/
-COPY --from=builder /app/target/*.jar app.jar
 
 ARG JAVA_OPTS=""
 RUN echo $JAVA_OPTS 
@@ -58,9 +56,7 @@ RUN echo $JAVA_OPTS
 
 # ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -cp '/opt/app/spring-boot-loader:/opt/app/dependencies/*:/opt/app/snapshot-dependencies/*:/opt/app/application' org.springframework.boot.loader.JarLauncher"]
 
-# ENTRYPOINT ["sh", "-c", \
-# "java -XX:+IdleTuningCompactOnIdle \
-# -XX:+IdleTuningGcOnIdle -XX:+UseContainerSupport -Xshareclasses ${JAVA_OPTS} \
-# org.springframework.boot.loader.JarLauncher ${0} ${@}"]
-
-ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS} -jar app.jar"]
+ENTRYPOINT ["sh", "-c", \
+"java -server --enable-preview \
+-XX:+UseG1GC -XX:+UseStringDeduplication ${JAVA_OPTS} \
+org.springframework.boot.loader.JarLauncher ${0} ${@}"]
